<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="232dp"
        android:layout_height="132dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"

        />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/latoregular"
        android:text="@string/please_log_in_or_sign_up"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/loginEmailInput"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/envelope"
        android:drawablePadding="15dp"
        android:ems="10"
        android:padding="5dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="160dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

    <TextView
        android:id="@+id/gotoSignupPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>